         decent gap between edges in adjacent blocks (fixes bug #1929571)
         (Fred).
20080512 tapeconv.c,man/tapeconv.1: add options for updating archive info
         blocks, embedding loading screen and cassette inlays during
         conversion (Fred).
20080512 tape2wav.c: add help text for rate option (Fred).
20080614 configure.in: add --without-audiofile (patch #1982487)
         (José Manuel Ferrer Ortiz).
20080630 audio2tape.c,listbasic.c,rzxcheck.c,rzxtool.c,snap2tzx.c,snapconv.c,
	 tape2wav.c,tapeconv.c,tzxlist.c,utils.c: handle new allocator returns
	 object style API from libspectrum.
20080701 audio2tape.c,snap2tzx.c,tapeconv.c: handle new void return values
         tape API from libspectrum (Fred).
20080922 Makefile.am,audio2tape.[c|cc|h],configure.in,
         converter/{findpilot.[cc|h],findsync1.[cc|h],getpulse1.[cc|h],
         getpulse2.[cc|h],getsync2.[cc|h],romloader.[cc|h],romloaderstate.h},
         importer/{interpolator.h,schmitt.h,simple.h,soundfile.[cc|h],
         trigger.[cc|h]},man/audio2tape.1: add facility to recognise ROM blocks
         when processing audio file (Fred).
20080922 converter/romloader.cc: custom timings were only initialised when stats
         were enabled (Fred).
20080922 importer/soundfile.cc: initialise frequency table to 0 (Fred).
20080928 tzxlist.c: add block and tape lengths to output (Fred).
20081027 ChangeLog: bring up to date.
20081109 hacking/cvs-tags: document 0.10.0 branch.
20081116 tape2wav.c: fix buffer overflow in tape2wav (Jiri Benc).
20081116 convertor/romloader.cc: add missing #include <limits>.
20081117 ocnfigure.in: bump version number for 0.10.0-pre1 release (fuse-utils_0_10_0-branch).
20081119 Makefile.am: Distribute audio2tape.h importer/{schmitt.h,simple.h,
         soundfile.h} converter/romloader.h (thanks, Chris Young) (Fred).
20081129 configure.in: also set CXXFLAGS for --with-local-prefix (fixes bug
         #2358508) (Fred).